# Cache-Lite

./: README.md
.github/workflows/: Cache-Lite.C++.yaml  Cache-Lite.NET.yaml  Cache-Lite.OCaml.yaml  Cache-Lite.Rust.yaml  cache_lite.jvm.yaml
Cache-Lite.C++/: xmake.lua
Cache-Lite.C++/src/: LRUCache.h  PerpetualCache.cpp  PerpetualCache.h
Cache-Lite.C++/test/: LRUCacheTest.cpp
Cache-Lite.JVM/: README.md
Cache-Lite.JVM/src/main/scala/com/xfri/muqiuhan/cache_lite/: Cache.scala  GenericCache.scala
Cache-Lite.JVM/src/main/scala/com/xfri/muqiuhan/cache_lite/impl/: Expirable.scala  FIFO.scala  LRU.scala  Perpetual.scala  Soft.scala  Weak.scala
Cache-Lite.JVM/src/test/scala/com/xfri/muqiuhan/cache_lite/impl/: Expirable.scala  FIFOTest.scala  LRUTest.scala  PerpetualTest.scala  SoftTest.scala  WeakTest.scala
Cache-Lite.NET/CacheLite.NET/: Library.fs
Cache-Lite.NET/CacheLite.NET.Tests/: UnitTest1.fs
Cache-Lite.OCaml/: cache_lite.opam
Cache-Lite.OCaml/lib/: dune
Cache-Lite.Racket/: LICENSE-APACHE  LICENSE-MIT  README.md  info.rkt
Cache-Lite.Racket/.github/workflows/: ci.yml
Cache-Lite.Racket/scribblings/: cache-lite.scrbl
CacheLite.NET/: CacheLite.NET.sln
CacheLite.NET/CacheLite.NET.Tests/: CacheLite.NET.Tests.fsproj
cache_lite_ocaml/: dune-project
cache_lite_ocaml/test/: dune
cache_lite_rust/: Cargo.toml
cachelite.jvm/: README.md  build.sbt
cachelite.jvm/src/main/scala/com/xfri/muqiuhan/cache_lite/: Cache.scala  GenericCache.scala
cachelite.jvm/src/main/scala/com/xfri/muqiuhan/cache_lite/impl/: LRU.scala
