(lang dune 3.11)

(name cache_lite)

(generate_opam_files true)

(source
 (github muqiuhan/cache-lite))

(authors "Muqiu Han")

(maintainers "Muqiu Han")

(license MIT)

(documentation https://github.com/muqiuhan/Cache-Lite/tree/main/cache_lite_ocaml)

(package
 (name cache_lite)
 (synopsis "An extremely lightweight cache framework for Scala/JVM")
 (description "An extremely lightweight cache framework for Scala/JVM")
 (depends ocaml dune)
 (tags
  (cache caching "cache framework")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
